--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": false,
   "scripts": {
     "test": "NODE_ENV=test ./node_modules/.bin/mocha 'test/**/*.js' --reporter spec",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production forever server.js start"
   },
   "repository": {
     "type": "git",
