--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "koa-response-time": "~1.0.2",
     "koa-router": "~5.4.0",
     "koa-send": "^3.2.0",
+    "koa-static": "^2.0.0",
     "lodash": "~4.12.0",
     "mongoose": "git://github.com/LearnBoost/mongoose",
     "winston": "~2.1.1"
