--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "koa-static": "^2.0.0",
     "lodash": "~4.12.0",
     "mongoose": "git://github.com/LearnBoost/mongoose",
+    "simple-array-diff": "^1.1.0",
     "winston": "~2.1.1"
   },
   "devDependencies": {
