.gitkeep on public folder

--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,6 @@ config/config.js
 tests/node_modules
 npm-debug.log
 
-public/illus/*
-!/public/illus/
-public/tmp/actors/*
-!/public/tmp/actors
-public/tmp/posters/*
-!/public/tmp/posters
-public/posters/cover/*
-!/public/posters/cover
-public/posters/thumbnails/*
-!/public/posters/thumbnails
+public/**/*.png
+public/**/*.jpg
+public/**/*.jpeg
