--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "forever": "^0.15.2",
     "gm": "^1.22.0",
+    "image-size": "^0.5.0",
     "isuuid": "^0.1.0",
     "koa": "~1.2.0",
     "koa-bodyparser": "~2.0.1",
