--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "koa-router": "~5.4.0",
     "koa-send": "^3.2.0",
     "koa-static": "^2.0.0",
+    "limax": "^1.3.0",
     "lodash": "~4.12.0",
     "mongoose": "git://github.com/LearnBoost/mongoose",
     "request": "^2.72.0",
     "simple-array-diff": "^1.1.0",
+    "slugify": "^0.1.1",
     "winston": "~2.1.1"
   },
   "devDependencies": {
