--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
       "email": "louisdebraine@gmail.com"
     }
   ],
-  "bin": {
-    "import": "./bin/migrate.js"
-  },
   "private": false,
   "scripts": {
     "db:import": "node ./config/import/import.js",
@@ -56,6 +53,7 @@
     "lodash": "~4.12.0",
     "mongoose": "git://github.com/LearnBoost/mongoose",
     "request": "^2.72.0",
+    "restling": "^0.9.1",
     "simple-array-diff": "^1.1.0",
     "slugify": "^0.1.1",
     "winston": "~2.1.1"
