--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "koa-router": "~5.4.0",
     "koa-send": "^3.2.0",
     "koa-static": "^2.0.0",
+    "koa-timeout": "^0.1.1",
     "limax": "^1.3.0",
     "lodash": "~4.12.0",
     "mongoose": "git://github.com/LearnBoost/mongoose",
+    "mongoose-random": "^0.1.1",
     "request": "^2.72.0",
     "restling": "^0.9.1",
     "shuffle-array": "^1.0.0",
